changes to default value and name plus log

--- a/views/ai_debate/alphaView.ejs
+++ b/views/ai_debate/alphaView.ejs
@@ -371,7 +371,7 @@
                 class="avatar-gif" alt="Alpha speaking"
                 style="display:none;width:64px;height:64px;border-radius:50%;object-fit:cover;" />
             </div>
-            <h2 id="alphaTitle">Alpha (Pro)</h2>
+            <h2 id="alphaTitle">Sashi Tharoor</h2>
             <div id="alphaTurns" class="debater-scroll"></div>
           </div>
         </div>
