--- a/views/ai_debate/betaView.ejs
+++ b/views/ai_debate/betaView.ejs
@@ -371,7 +371,7 @@
           <span class="avatar-icon" id="betaAvatarIcon">🧑‍💼</span>
           <img src="/images/voice_start.gif" id="betaAvatarGif" class="avatar-gif" alt="Beta speaking" style="display:none;width:64px;height:64px;border-radius:50%;object-fit:cover;" />
         </div>
-        <h2 id="betaTitle">Beta (Con)</h2>
+        <h2 id="betaTitle">Imran khan</h2>
         <div id="betaTurns" class="debater-scroll"></div>
       </div>
     </div>
