change to default names

--- a/views/ai_debate/live.ejs
+++ b/views/ai_debate/live.ejs
@@ -864,7 +864,7 @@
       <div class="setup-grid">
         <div class="input-group">
           <label for="alphaNameInput">Alpha Name</label>
-          <input type="text" id="alphaNameInput" placeholder="Alpha name..." required value="Alpha">
+          <input type="text" id="alphaNameInput" placeholder="Alpha name..." required value="Sashi Tharoor">
         </div>
         <div class="input-group">
           <label for="alphaVoiceSelect">Alpha Voice</label>
@@ -876,7 +876,7 @@
         </div>
         <div class="input-group">
           <label for="betaNameInput">Beta Name</label>
-          <input type="text" id="betaNameInput" placeholder="Beta name..." required value="Beta">
+          <input type="text" id="betaNameInput" placeholder="Beta name..." required value="Imran Khan">
         </div>
         <div class="input-group">
           <label for="betaVoiceSelect">Beta Voice</label>
